# assessment

./: Dockerfile  Dockerfile.dev  README.md  constraints.txt  pyproject.toml
src/assessment/: app.py  reportx.jinja
test/e2e/: test_app_ssllabs_api.py
test/unit/: test_app.py
